# KoopmanMpcThruster

./: README (copy).md  README.md
GazeboThruster/src/simple_auv/scripts/: description_generator.py
KoopmanMPC/: VanDerPol.m  mpc_matrix.mat  odom_data_thruster.csv
KoopmanMPC/Resources/: rbf.m
gazebo_model/: readme.md
gazebo_model/install/: local_setup.sh  setup.sh  spawn_shell.bash
gazebo_model/install/gazebo_model/share/gazebo_model/: package.bash  package.dsv  package.zsh
gazebo_model/install/gazebo_model/share/gazebo_model/hooks/: hook.dsv
gazebo_model/install/gazebo_model/share/gazebo_model/models/tethys/: model.sdf  model.sdf.in
gazebo_model/log/: latest_build
gazebo_model/src/gazebo_model/: CMakeLists.txt  colcon.pkg
gazebo_model/src/gazebo_model/models/tethys_equipped/: model.sdf
gazebo_model/src/gazebo_model/worlds/: water_thruster.sdf
koopman_mpc/: README.md  Thruster_Koopman_mpc.py  Thruster_collect_launch.py  odom_data_thruster.csv  rosgzbridge_launch.py
koopman_mpc/install/: local_setup.sh  setup.sh  spawn_shell.bash
koopman_mpc/install/ros2gzbridge/lib/ros2gzbridge/: Thruster_mpc  data_collect_thruster  odometry_subscriber
koopman_mpc/install/ros2gzbridge/share/ament_index/resource_index/package_run_dependencies/: ros2gzbridge
koopman_mpc/install/ros2gzbridge/share/ros2gzbridge/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
koopman_mpc/install/ros2gzbridge/share/ros2gzbridge/launch/: rosgzbridge_launch.py
koopman_mpc/install/thruster_mpc_controller/lib/thruster_mpc_controller/: mpc_controller
koopman_mpc/install/thruster_mpc_controller/share/thruster_mpc_controller/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
koopman_mpc/install/thruster_mpc_controller/share/thruster_mpc_controller/launch/: thruster_mpc_controller_launch.py
koopman_mpc/log/: latest_build
koopman_mpc/src/: README.md
koopman_mpc/src/ros2gzbridge/: CMakeLists.txt
koopman_mpc/src/ros2gzbridge/src/: Thruster_mpc.cpp  data_collect_thruster.cpp  tethys_states.cpp
koopman_mpc/src/thruster_mpc_controller/: casadi_test.py  lift_fun.py  mpc_python_test.py  setup.cfg  setup.py
matlab_koopman/: Gazebo_lsrv.m
ros_gz_bridge/: README.md
